--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.password=Prasad66
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.main.allow-circular-references=true
+
+#spring.datasource.url=jdbc:mysql://sql205.epizy.com:3306/epiz_34168265_studentApp?useSSL=false
+#spring.datasource.username=epiz_34168265
+#spring.datasource.password=Prasad@66
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
